<resources>
    <string name="app_name">Kirpitch</string>
    <string name="edit_text_email">E-mail</string>
    <string name="edit_text_password">Password</string>
    <string name="button_login">LOGIN</string>
    <string name="button_register">REGISTER</string>
    <string name="facebook_login_picture">"facebook_login_button"</string>
    <string name="google_login_picture">google_login_button</string>
    <string name="minimum_password">Password must be of 6 characters minimum</string>
    <string name="auth_failed">Authentication Failed: login or password is wrong</string>
    <string name="button_nav_logout">Logout</string>
    <string name="button_nav_deleteAccount">DELETE ACCOUNT</string>
    <string name="menu_title">Actions Menu</string>

    <string name="navigation_drawer_l_open">Open navigation drawer</string>
    <string name="navigation_drawer_l_close">Close navigation drawer</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="stage">Stage</string>
    <string name="job_profile">Jop profile</string>
    <string name="notification">Notification</string>
    <string name="create">Created</string>

    <string-array name="array_item">
        <item>Draft</item>
        <item>Cancel</item>
        <item>Application Send</item>
        <item>Interview</item>
        <item>Technical Interview</item>
        <item>Completed</item>
        <item>Closed</item>
    </string-array>

    <string name="done">done</string>
    <string name="delete">delete</string>
    <string name="no_task">No task available\nClick on \'+\' to create one</string>
</resources>