<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/e_mail_layoutLA"
        android:layout_width="224dp"
        android:layout_height="@dimen/option_size"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/password_layoutLA"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/e_mailLA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layoutLA"
        android:layout_width="224dp"
        android:layout_height="@dimen/option_size"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/button_loginLA"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_mail_layoutLA"
        app:layout_constraintVertical_chainStyle="packed"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordLA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_password"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_loginLA"
        android:layout_width="224dp"
        android:layout_height="@dimen/option_size"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="#cb4154"
        android:text="@string/button_login"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_registerLA"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layoutLA"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_registerLA"
        android:layout_width="224dp"
        android:layout_height="@dimen/option_size"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="#cb4154"
        android:text="@string/button_register"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_facebook"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_loginLA"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/login_facebook"
        android:layout_width="@dimen/option_size"
        android:layout_height="@dimen/option_size"
        android:contentDescription="@string/facebook_login_picture"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/login_google"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <ImageView
        android:id="@+id/login_google"
        android:layout_width="@dimen/option_size"
        android:layout_height="@dimen/option_size"
        android:contentDescription="@string/google_login_picture"
        android:src="@drawable/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/login_facebook"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>